fix text align

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_imagepromo.sass
@@ -105,8 +105,8 @@
         @include breakpoint(desktop, up)
             padding-left: 80px
     .imagepromo__headbox
-        text-align-last: left
+        text-align: left
         @include breakpoint(desktop, up)
             margin-top: -45px
     .imagepromo__contentbox
-        text-align-last: left
+        text-align: left
